# dytox_modification

./: .gitignore  README.md  pyproject.toml
docs/: requirements-dytox.txt
src/adl/: __init__.py  cli.py
src/adl/models/: dytox.py  factory.py
src/adl/models/backbones/: convit.py  vit.py  weight_init.py
src/adl/models/backbones/cnn/: __init__.py  abstract.py  inception.py  resnet.py  resnet_rebuffi.py  resnet_scs.py  senet.py  vgg.py
src/adl/scripts/: train.sh
src/adl/training/: engine.py  losses.py  samplers.py
